--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ header {
 
 #projects {
     background: #5A352A;
-    padding-top: 1.5rem;
+    padding: 1.5rem 0;
 }
 
 #projects h1 {
@@ -51,14 +51,263 @@ header {
     font-size: 1.5rem;
     text-align: center;
     margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    width: 90%;
+    border-bottom: 1px solid #FFFFFA;
 }
 
-#projects h1::after {
-    content: "";
+.project-tile {
     width: 80%;
-    height: 1px;
+    height: 80%;
+    margin: 1rem auto;
+    box-shadow: rgba(0, 0, 0, 0.54) 0px 3px 8px;
+}
+
+.project-tile img {
+    width: 100%;
+    margin-bottom: 0;
+}
+
+.project-tile p {
+    background-color: #27213C;
+    margin-top: -5px;
     color: #FFFFFA;
+    padding: 1rem;
+    text-align: center;
+    /* font-size: 1.2rem; */
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.project-tile span {
+    color: #E89005;
+    margin: 0 .2rem;
+    font-size: .8rem;
+    opacity: 0;
+    transition: all .5s;
+}
+
+.project-tile:hover p > span {
+    opacity: 1;
+}
+
+.btn {
+    display: block;
+    text-decoration: none;
+    color: #27213C;
+    border: 3px solid #27213C;
+    margin-top: 1rem;
+    margin-left: 30%;
+    text-align: center;
+    padding: .5rem;
+    width: 30%;
+    font-size: 1.3rem;
     position: relative;
-    top: 0;
+    transition: all 1s;
+    overflow: hidden;
+    z-index: 2;
+}
+
+.btn:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
     left: 0;
+    top: 0;
+    background-color: #27213C;
+    z-index: 0;
+    transform: translateX(-100%);
+    transition: all 1s;
+}
+
+.btn:hover {
+    color: #FFFFFA;
+}
+
+.btn:hover:before {
+    transform: translateX(0);
+    z-index: -1;
+}
+
+#contact {
+    height: 100vh;
+    background-color: #27213C;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+}
+
+#contact .coffee {
+    margin-top: 8rem;
+    color: #FFFFFA;
+}
+
+.coffee h1 {
+    font-size: 2rem;
+    margin-bottom: 0;
+}
+
+.coffee p {
+    margin-top: .5rem;
+    text-align: center;
+    font-style: italic;
+    opacity: .5;
+}
+
+#contact ul {
+    margin-top: 1rem;
+    font-size: 1.3rem;
+}
+
+#contact li {
+    margin-top: 1rem;
+}
+
+#contact a {
+    color: #FFFFFA
+}
+
+#contact i {
+    margin-right: 10px;
+}
+
+footer {
+    border-top: 3px solid #E89005;
+    background-color: #27213C;
+    color: #FFFFFA;
+    font-size: 1.2rem;
+    font-weight: 100;
+    text-align: center;
+}
+
+@media screen and (max-height: 320px) {
+    #contact .coffee {
+        margin-top: 4rem;
+    }
+}
+
+@media screen and (max-height: 360px) and (min-height: 320px) {
+    #contact {
+        height: 125vh;
+    }
+
+    #projects h1 {
+        width: 60%;
+    }
+}
+
+@media screen and (max-height: 420px) and (min-height: 361px) {
+    #projects h1 {
+        width: 50%;
+    }
+
+    #contact {
+        height: 115vh;
+    }
+
+    #contact .coffee {
+        margin-top: 6rem;
+    }
+}
+
+@media screen and (max-height: 823px) and (min-height: 570px) {
+    #contact {
+        height: 70vh;
+    }
+}
+
+@media screen and (min-width: 900px) {
+
+    header {
+        padding: 1rem;
+    }
+
+    #navbar {
+        padding: 0;
+    }
+
+    #navbar a {
+        font-size: 1.7rem;
+        margin-right: 2rem;
+        font-weight: bold;
+        transition: all .5s;
+    }
+
+    #navbar a:hover {
+        letter-spacing: 5px;
+        color: #27213C;
+    }
+
+    #welcome-section h1 {
+        font-size: 8rem;
+        margin-bottom: 0;
+    }
+
+    #welcome-section p {
+        font-size: 5rem;
+        margin-top: 30px;
+    }
+
+    #projects h1 {
+        width: 25%;
+        font-size: 2rem;
+    }
+
+    #projects .tiles {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    .project-tile img {
+        transition: all .5s;
+    }
+
+    .project-tile:hover img {
+        transform: scale(0.95);
+    }
+
+    .btn {
+        width: 10%;
+        margin-left: 45%;
+    }
+
+    .coffee h1 {
+        font-size: 4rem;
+    }
+
+    .coffee p {
+        font-size: 2rem;
+    }
+
+    #contact {
+        height: 80vh;
+    }
+
+    #contact ul {
+        display: flex;
+        font-size: 1.8rem;
+        margin-top: 2rem;
+    }
+
+    #contact li {
+        margin-right: 2.5rem;
+        transition: all .5s;
+    }
+
+    #contact li:hover {
+        transform: scale(1.2);
+    }
+
+    #contact i {
+        margin-right: 5px;
+    }
+
+    footer {
+        /* height: 100px; */
+        font-size: 1.5rem;
+        padding: 20px 0;
+    }
 }
